# AFTS

./: README.md  afts.json  alembic.ini  environment.txt  main.py  new_prompt.txt  pyproject.toml
advisor/: SCAN.md  SYSTEM-DETAILED.md  SYSTEM.md
advisor/source/: SCAN.md  prompt.md
data/: afts.db
migrations/: env.py
model/: SCAN.md
model/source/: SCAN.md
src/: __init__.py  model.py
src/config/: __init__.py  config.py
src/database/: __init__.py  crud.py  makeup.py  session.py  test_crud.py
src/logging/: __init__.py  logger.py
src/model/: __init__.py  czsc.py  lester.py  llm.py
src/services/: __init__.py  account_service.py  instrument_service.py  log_service.py  market_data_service.py  order_service.py  plan_service.py  position_service.py  test_services.py  trade_service.py
src/test/: test_scan.py
src/trading/: lester.py  shinny.py
tablemodels/: __init__.py  models.py
usercase/: Case1 result.txt  Case1.txt  Case2 result.txt  Case2.txt
usercase/autocase/DECIDE/: case1.md  case2.md
usercase/autocase/LOSS/: case2.md
usercase/autocase/STOP/: case1.md
